--- a/dalmuti.htm
+++ b/dalmuti.htm
@@ -12,6 +12,8 @@
 		<script src="/javascripts/jquery.form.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery.tinyscrollbar.min.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery.contextMenu.js" type="text/javascript"></script>
+		<script src="/javascripts/buzz.js" type="text/javascript"></script>
+
 		<script src="/javascripts/utils.js" type="text/javascript"></script> 
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script> 
 		<script src="/javascripts/game.js" type="text/javascript"></script> 
@@ -68,7 +70,13 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 		<div id="top_wrapper">
 			<div id="header">
-				<div class="fb-like" data-href="http://www.dalmutionline.com" data-send="true" data-width="800" data-show-faces="false" data-colorscheme="dark"></div>
+				<div class="fb-like" data-href="http://www.dalmutionline.com" data-send="true" data-width="600" data-show-faces="false" data-colorscheme="dark"></div>
+				<div id="sound_control">
+					<input id="sound_bgm_checkbox" type="checkbox" checked="checked" value="true">
+					<label for="sound_bgm_checkbox" alt="">배경음(F7)</label>
+					<input id="sound_effect_checkbox" type="checkbox" checked="checked" value="true">
+					<label for="sound_effect_checkbox">효과음(F8)</label>
+				</div>
 			</div>
 			<div id="wrapper" style="display:none;"> 
 				<div id="entrance_wrapper">
