--- a/dalmuti.htm
+++ b/dalmuti.htm
@@ -70,7 +70,7 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 		<div id="top_wrapper">
 			<div id="header">
-				<div class="fb-like" data-href="http://www.dalmutionline.com" data-send="true" data-width="600" data-show-faces="false" data-colorscheme="dark"></div>
+				<div class="fb-like" data-href="http://www.facebook.com/DalmutiOnline" data-send="true" data-width="600" data-show-faces="false" data-colorscheme="dark"></div>
 				<div id="sound_control">
 					<input id="sound_bgm_checkbox" type="checkbox" checked="checked" value="true">
 					<label for="sound_bgm_checkbox" alt="">배경음(F7)</label>
