admin message is added

--- a/dalmuti.htm
+++ b/dalmuti.htm
@@ -82,12 +82,14 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 		<div id="top_wrapper">
 			<div id="header">
+				<div id="admin_message">
+					<div id="admin_message_text"></div>
+				</div>
+
 				<div class="fb-like" data-href="http://www.facebook.com/DalmutiOnline" data-send="true" data-width="600" data-show-faces="false" data-colorscheme="dark"></div>
 				<div id="sound_control">
-					<input id="sound_bgm_checkbox" type="checkbox" checked="checked" value="true">
-					<label for="sound_bgm_checkbox" alt="">배경음(F7)</label>
-					<input id="sound_effect_checkbox" type="checkbox" checked="checked" value="true">
-					<label for="sound_effect_checkbox">효과음(F8)</label>
+					<label for="sound_bgm_checkbox" alt=""><input id="sound_bgm_checkbox" type="checkbox" checked="checked" value="true">배경음(F7)</label>
+					<label for="sound_effect_checkbox"><input id="sound_effect_checkbox" type="checkbox" checked="checked" value="true">효과음(F8)</label>
 				</div>
 			</div>
 			<div id="wrapper" style="display:none;"> 
@@ -591,7 +593,7 @@
 					<a href="mailto:secury@wafflestudio.com">secury@wafflestudio.com</a>
 				</p>
 				<p style="font-size:9pt;padding:5px;">
-				Last updated on 12.03.08
+				Last updated on 12.03.11
 				</p>
 			</div>
 		</div>
