Auto pass is added

--- a/dalmuti.htm
+++ b/dalmuti.htm
@@ -202,8 +202,13 @@
 									</div>
 								</div>
 
+								<div id="room_autopass">
+									<input type="checkbox" id="autopass_checkbox" /><label for="autopass_checkbox">Auto Pass</label>
+								</div>
+
 								<div id="room_turn_master">
 								</div>
+
 							</div>
 
 							<div id="room_chat">
