Observer function is added

--- a/dalmuti.htm
+++ b/dalmuti.htm
@@ -203,7 +203,7 @@
 								</div>
 
 								<div id="room_autopass">
-									<input type="checkbox" id="autopass_checkbox" /><label for="autopass_checkbox">Auto Pass</label>
+									<input type="checkbox" id="autopass_checkbox" checked="checked" /><label for="autopass_checkbox">Auto Pass</label>
 								</div>
 
 								<div id="room_turn_master">
@@ -373,12 +373,10 @@
 								<th>Secret</th>
 								<td><input class="input-check" id="room_is_secret" name="is_secret" type="checkbox" /><label for="room_is_secret">Secret</label></td>
 							</tr>
-							<!--
 							<tr>
 								<th>Observer</th>
 								<td><input class="input-check" id="room_allowing_observer" name="allowing_observer" type="checkbox" checked="checked" /><label for="room_allowing_observer">Allow</label></td>
 							</tr>
-							-->
 							<tr>
 								<th>Title</th>
 								<td><input class="input-text" id="room_title" name="title" type="text" placeholder="Enter a title" /></td>
